@@ -1,0 +1,7 @@
+#ifndef UAE_ASSERT_H
+#define UAE_ASSERT_H
+
+#include <assert.h>
+#define uae_assert assert
+
+#endif // UAE_ASSERT_H
